Atualização de XP

--- a/index.html
+++ b/index.html
@@ -82,30 +82,25 @@
     <!-- About -->
     <section class="resume-section p-3 p-lg-5 d-flex d-column" id="about">
       <div class="my-auto">
-        <h1 class="mb-0">
-          <i class="fa fa-user-o text-primary"></i> Ricardo
-          <span class="text-primary">Rinco</span>
-        </h1>
-
+        <h1 class="mb-0"><i class="fa fa-user-o text-primary"></i> Ricardo <span class="text-primary">Rinco</span></h1>
         <div class="subheading mb-5">Jundiaí · São Paulo</div>
-
         <br>
 
         <p class="mb-5">
-          Profissional formado com Honra ao Mérito em Sistemas de Informação, com atuações em atividades voltadas ao desenvolvimento
-          de softwares utilizando .NET Framework e Visual Studio.
+          Profissional formado com Honra ao Mérito em Sistemas de Informação, com atuações em atividades voltadas ao desenvolvimento de softwares utilizando 
+          .Net Framework e Visual Studio.
+          
+          <br><br>Possuo boa experiência em .Net C# atuando em projetos Desktop, Web (MVC e WebForms) e WebAPI com desenvolvimento e manutenção de aplicações multicamadas 
+          empregando Padrões de Projetos, conceitos de Orientação a Objetos, boas práticas de Arquitetura de Software e realização de Testes Unitários.
 
-          <br> Experiência nas tecnologias: C#, .Net Core, VB.Net, Windows Forms, ASP.NET (Web Forms e MVC), Web Services, WebAPI,
-          ADO.NET, LINQ, Entity Framework, NHibernate, ReportViewer, Crystal Reports, SQL Server, Oracle e MySQL.
+          <br><br>Utilização dos Bancos de Dados mais utilizados no mercado, SQL Server, MySQL e Oracle. Implementação dos ORM EntityFramework, NHibernate e Dapper, para 
+          acesso aos dados.
 
-          <br> Desenvolvimento e manutenção de aplicações multicamadas empregando padrões de projetos, conceitos de Orientação
-          a Objetos, boas práticas de Arquitetura de Software e realização de Teste Unitários.
+          <br><br>Elaboração de especificações funcionais, levantamento de requisitos e modelagem de sistemas.
 
-          <br> Levantamento de requisitos de sistemas e elaboração de especificações funcionais. Modelagem de sistemas utilizando
-          diagramas de Entidade-Relacionamento (DER) e notação UML (Casos de Uso, Diagramas de Classes e Sequência).
+          <br><br>Experiências nas tecnologias: .Net Core, VB.Net, Windows Forms, ADO.NET, LINQ, ReportViewer, Crystal Reports e Angular.
 
-          <br> Conhecimento em SQLite, MongoDB, Angular, NodeJS e em desenvolvimento de aplicações para dispositivos móveis utilizando
-          Android SDK e Xamarin.
+          <br><br>Conhecimentos nas tecnologias: SQLite, MongoDB, NodeJS e desenvolvimento de aplicações móveis utilizando Android SDK, Xamarin e Ionic.
         </p>
 
         <ul class="list-inline list-social-icons mb-0">
@@ -141,14 +136,30 @@
     <!-- Experience -->
     <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="experience">
       <div class="my-auto">
-        <h2 class="mb-5">
-          <i class="fa fa-suitcase text-primary"></i> Experiência</h2>
+        <h2 class="mb-5"><i class="fa fa-suitcase text-primary"></i> Experiência Profissional</h2>
+
+        <!-- Tavoloni  -->
+        <div class="resume-item d-flex flex-column flex-md-row mb-5">
+          <div class="resume-content mr-auto">
+            <h3 class="mb-0">Desenvolvedor Frontend Angular</h3>
+            <div class="subheading mb-3">SE7EN / SOLID Dev Team (Freelance)</div>
+            <p>
+              Desenvolvimento de Arquitetura Frontend em Angular 4.X para suporte de aplicação E-commerce e Backoffice de multiusuário.
+              Implementação de JSON Web Token, Serviços, Interceptors, Pipes, Rotas e Componentes para comunicação com os endpoints 
+              disponibilizados através de WebAPI Rest.
+            </p>
+          </div>
+          <div class="resume-date text-md-right">
+            <span class="text-primary">Novemvro 2017</span>
+          </div>
+        </div>
+        <!-- // Tavoloni -->
 
         <!-- Késsem -->
         <div class="resume-item d-flex flex-column flex-md-row mb-5">
           <div class="resume-content mr-auto">
-            <h3 class="mb-0">Desenvolvedor NodeJS</h3>
-            <div class="subheading mb-3">Késsem Processamento de Dados</div>
+            <h3 class="mb-0">Desenvolvedor Backend NodeJS</h3>
+            <div class="subheading mb-3">SE7EN / SOLID Dev Team (Freelance)</div>
             <p>
               Criação de Arquitetura de Micro-Services adequada para desenvolvimento de API’s em NodeJS. Implementação de Login Social,
               através do Facebook, Google Plus e Twiiter.
@@ -163,7 +174,7 @@
         <!-- Prime -->
         <div class="resume-item d-flex flex-column flex-md-row mb-5">
           <div class="resume-content mr-auto">
-            <h3 class="mb-0">Desenvolvedor .Net Pleno</h3>
+            <h3 class="mb-0">Desenvolvedor Backend .Net</h3>
             <div class="subheading mb-3">Prime Desenvolvimento de Software</div>
             <p>
               Desenvolvimento e correções em sistema de varejo, integração entre sistemas legados com novas tecnologias utilizando .Net
@@ -180,7 +191,7 @@
         <!-- UpSoftware -->
         <div class="resume-item d-flex flex-column flex-md-row mb-5">
           <div class="resume-content mr-auto">
-            <h3 class="mb-0">Desenvolvedor .Net Pleno</h3>
+            <h3 class="mb-0">Desenvolvedor Fullstack .Net</h3>
             <div class="subheading mb-3">UpSolutions Serviços Empresariais</div>
             <p>
               Desenvolvimento da nova Arquitetura de Software para a realização da refatoração do antigo sistema ERP. Modelagem da Arquitetura
@@ -197,7 +208,7 @@
         <!-- Labsoft -->
         <div class="resume-item d-flex flex-column flex-md-row mb-5">
           <div class="resume-content mr-auto">
-            <h3 class="mb-0">Desenvolvedor .Net Pleno</h3>
+            <h3 class="mb-0">Desenvolvedor Backend .Net</h3>
             <div class="subheading mb-3">Labsoft Tecnologia</div>
             <p>
               Atuação com Sistema de Automação e Gestão de Laboratórios (LIMS). Desenvolvimento de Documentos e Laudos Técnicos, Relatórios
@@ -216,7 +227,7 @@
         <!-- Regra -->
         <div class="resume-item d-flex flex-column flex-md-row">
           <div class="resume-content mr-auto">
-            <h3 class="mb-0">Programador .Net Junior</h3>
+            <h3 class="mb-0">Desenvolvedor Fullstack .Net</h3>
             <div class="subheading mb-3">Regra Tecnologia da Informação</div>
             <p>
               Desenvolvimento e manutenção de módulos de sistema ERP, estabelecendo os processos operacionais necessários para o tratamento
@@ -231,9 +242,10 @@
           </div>
         </div>
         <!-- // Regra -->
-      </div>
-    </section>
-    <!-- // Experience -->
+
+        </div>
+      </section>
+      <!-- // Experience -->
 
     <!-- Education -->
     <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="education">
@@ -297,8 +309,7 @@
     <!-- Skills -->
     <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="skills">
       <div class="my-auto">
-        <h2 class="mb-5">
-          <i class="fa fa-gamepad text-primary"></i> Habilidades</h2>
+        <h2 class="mb-5"><i class="fa fa-gamepad text-primary"></i> Habilidades</h2>
 
         <ul class="list-inline list-icons">
           <li class="list-inline-item">
@@ -400,8 +411,19 @@
     <!-- Portfolio -->
     <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="portfolio">
       <div class="my-auto">
-        <h2 class="mb-5">
-          <i class="fa fa-id-card-o text-primary"></i> Portfolio</h2>
+        <h2 class="mb-5"><i class="fa fa-id-card-o text-primary"></i> Portfolio</h2>
+
+        <!-- ViaCEP -->
+        <div class="resume-item d-flex flex-column flex-md-row mb-5">
+          <div class="resume-content mr-auto">
+            <h3 class="mb-0">
+              <a href="https://github.com/ricardorinco/viacep" target="_blank">ViaCEP - Angular 2.X/4.X</a>
+            </h3>
+            <div class="subheading mb-3">NodeJS e Express</div>
+            <p>Implementação de uso do WebService ViaCEP. Contribuição para a comunidade com exemplo de uso deste serviço com o Angular na versão 2 ou superior.</p>
+          </div>
+        </div>
+        <!-- // ViaCEP -->
 
         <!-- Multirrom Chat -->
         <div class="resume-item d-flex flex-column flex-md-row mb-5">
@@ -413,7 +435,7 @@
             <p>Projeto desenvolvido para estudo de conceitos.</p>
           </div>
         </div>
-        <!-- // FinanceAPP -->
+        <!-- // Multirrom Chat -->
 
         <!-- FinanceAPP -->
         <div class="resume-item d-flex flex-column flex-md-row mb-5">
@@ -498,6 +520,14 @@
           <li>
             <i class="fa-li fa fa-trophy text-warning"></i>
             Certificado de Honra ao Mérito: Por ter-se distinguido nos estudos, durante o Curso Superior de Sistemas de Informação.
+          </li>
+          <li>
+            <i class="fa-li fa fa-trophy text-warning"></i>
+            Blindando e Validando Projetos com Notification Pattern | Paulo Rogério Martins Marques
+          </li>
+          <li>
+            <i class="fa-li fa fa-trophy text-warning"></i>
+            Construindo Aplicações Web com Angular 4 | COD3R Cursos de Programação
           </li>
           <li>
             <i class="fa-li fa fa-trophy text-warning"></i>
