--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
             </p>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">Novemvro 2017</span>
+            <span class="text-primary">Novembro 2017</span>
           </div>
         </div>
         <!-- // Tavoloni -->
@@ -161,8 +161,8 @@
             <h3 class="mb-0">Desenvolvedor Backend NodeJS</h3>
             <div class="subheading mb-3">SE7EN / SOLID Dev Team (Freelance)</div>
             <p>
-              Criação de Arquitetura de Micro-Services adequada para desenvolvimento de API’s em NodeJS. Implementação de Login Social,
-              através do Facebook, Google Plus e Twiiter.
+              Criação de Arquitetura de Micro-Serviços adequados para desenvolvimento de endpoints em NodeJS. Implementação de Login Social 
+              (Facebook, Google Plus e Twiiter).
             </p>
           </div>
           <div class="resume-date text-md-right">
@@ -177,9 +177,9 @@
             <h3 class="mb-0">Desenvolvedor Backend .Net</h3>
             <div class="subheading mb-3">Prime Desenvolvimento de Software</div>
             <p>
-              Desenvolvimento e correções em sistema de varejo, integração entre sistemas legados com novas tecnologias utilizando .Net
-              Core com Arquitetura de Micro-Services e Base de Dados NoSQL (MongoDB), seguindo padrões do ASP.NET Boilerplate.
-              Aplicação de SCRIM como Metodologia Ágil.
+              Desenvolvimento e correções em sistema de varejo. Integração entre sistemas legados com novas tecnologias utilizando 
+              .Net Core com Arquitetura de Micro-Serviços e Base de Dados NoSQL (MongoDB), adotando e implementando padrões do Boilerplate. 
+              Metodologia ágil de gestão da equipe SCRUM.
             </p>
           </div>
           <div class="resume-date text-md-right">
@@ -194,9 +194,8 @@
             <h3 class="mb-0">Desenvolvedor Fullstack .Net</h3>
             <div class="subheading mb-3">UpSolutions Serviços Empresariais</div>
             <p>
-              Desenvolvimento da nova Arquitetura de Software para a realização da refatoração do antigo sistema ERP. Modelagem da Arquitetura
-              seguindo os princípios de DDD (Domain-Driven Design), utilizando boas práticas e conceitos de Orientação a
-              Objetos e Design Paterns.
+              Desenvolvimento de Arquitetura .Net de Micro-Serviços para software ERP. Modelagem da Arquitetura seguindo os princípios de DDD 
+              (Domain-Driven Design). Utilização de boas práticas de desenvolvimento de software, Orientação a Objetos e Design Paterns.
             </p>
           </div>
           <div class="resume-date text-md-right">
@@ -211,11 +210,11 @@
             <h3 class="mb-0">Desenvolvedor Backend .Net</h3>
             <div class="subheading mb-3">Labsoft Tecnologia</div>
             <p>
-              Atuação com Sistema de Automação e Gestão de Laboratórios (LIMS). Desenvolvimento de Documentos e Laudos Técnicos, Relatórios
-              Gerenciais e Dashboards específicos para cada cliente, seguindo a sua área de atuação. Criação de módulos adicionais
-              específicos para a realização da integração do sistema junto aos equipamentos de análises do cliente. Participação
-              de projetos em etapa de implantação com realização de consultorias e adequação de automação, seguindo normas
-              do INMETRO e ISO.
+              Atuação com Sistema de Automação e Gestão de Laboratórios (LIMS). Desenvolvimento de Documentos e Laudos Técnicos, Relatórios 
+              Gerenciais e Dashboards específicos para cada cliente, seguindo suas definições e área de atuação. Criação de módulos adicionais 
+              específicos para a realização de integração do sistema junto aos equipamentos de análises do cliente.
+              Participação de projetos em etapa de implantação com realização de consultorias e adequação de automação, 
+              seguindo normas do INMETRO e ISO.
             </p>
           </div>
           <div class="resume-date text-md-right">
@@ -230,11 +229,11 @@
             <h3 class="mb-0">Desenvolvedor Fullstack .Net</h3>
             <div class="subheading mb-3">Regra Tecnologia da Informação</div>
             <p>
-              Desenvolvimento e manutenção de módulos de sistema ERP, estabelecendo os processos operacionais necessários para o tratamento
-              dos dados, baseando-se nas definições fornecidas na fase de análise e valendo-se de métodos e técnicas adequadas
-              aos equipamentos e aplicações que se destinavam, estudando os objetivos propostos, analisando as características
-              dos dados de entrada e o processamento necessário para a obtenção dos dados de saída desejado. Atuação nos
-              processos de Contas a Pagar, Ativo Imobilizado, Ordem de Serviço, Controle de Acesso e Romaneio de Cargas.
+              Desenvolvimento e manutenção de módulos de sistema ERP. Estabelecimento de processos operacionais necessários para o tratamento 
+              dos dados, baseando-se nas definições fornecidas na fase de análise e valendo-se de métodos e técnicas adequadas aos equipamentos 
+              e aplicações que se destinavam. Estudo dos objetivos propostos analisando a viabilidade do processo, levantamento das características 
+              dos dados de entrada e o processamento necessário para a obtenção dos dados de saída desejado.
+              Atuação nos processos de Contas a Pagar, Ativo Imobilizado, Ordem de Serviço, Controle de Acesso e Romaneio de Cargas.
             </p>
           </div>
           <div class="resume-date text-md-right">
@@ -243,10 +242,10 @@
         </div>
         <!-- // Regra -->
 
-        </div>
-      </section>
-      <!-- // Experience -->
-
+      </div>
+    </section>
+    <!-- // Experience -->
+    
     <!-- Education -->
     <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="education">
       <div class="my-auto">
