--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
     <section class="resume-section p-3 p-lg-5 d-flex d-column" id="about">
       <div class="my-auto">
         <h1 class="mb-0"><i class="fa fa-user-o text-primary"></i> Ricardo <span class="text-primary">Rinco</span></h1>
-        <div class="subheading mb-5">Jundiaí · São Paulo</div>
+        <div class="subheading mb-5">Adventista do Sétimo Dia, Observador do Sábado. Jundiaí · São Paulo</div>
         <br>
 
         <p class="mb-5">
@@ -412,13 +412,25 @@
       <div class="my-auto">
         <h2 class="mb-5"><i class="fa fa-id-card-o text-primary"></i> Portfolio</h2>
 
+        <!-- Sétimo Dia -->
+        <div class="resume-item d-flex flex-column flex-md-row mb-5">
+          <div class="resume-content mr-auto">
+            <h3 class="mb-0">
+              <a href="http://setimodia.com.br" target="_blank">Sétimo Dia</a>
+            </h3>
+            <div class="subheading mb-3">Angular</div>
+            <p>Aplicação Web para informar o horário do Pôr do Sol através da localização geográfica do usuário, desenvolvida utilizando Angular 5.</p>
+          </div>
+        </div>
+        <!-- // Sétimo Dia -->
+
         <!-- ViaCEP -->
         <div class="resume-item d-flex flex-column flex-md-row mb-5">
           <div class="resume-content mr-auto">
             <h3 class="mb-0">
               <a href="https://github.com/ricardorinco/viacep" target="_blank">ViaCEP - Angular 2.X/4.X</a>
             </h3>
-            <div class="subheading mb-3">NodeJS e Express</div>
+            <div class="subheading mb-3">Angular</div>
             <p>Implementação de uso do WebService ViaCEP. Contribuição para a comunidade com exemplo de uso deste serviço com o Angular na versão 2 ou superior.</p>
           </div>
         </div>
