--- a/index.html
+++ b/index.html
@@ -138,7 +138,26 @@
       <div class="my-auto">
         <h2 class="mb-5"><i class="fa fa-suitcase text-primary"></i> Experiência Profissional</h2>
 
-        <!-- Tavoloni  -->
+        <!-- Labsoft -->
+        <div class="resume-item d-flex flex-column flex-md-row mb-5">
+          <div class="resume-content mr-auto">
+            <h3 class="mb-0">Desenvolvedor Backend .Net</h3>
+            <div class="subheading mb-3">Labsoft Tecnologia</div>
+            <p>
+              Atuação com Sistema de Automação e Gestão de Laboratórios (LIMS). Desenvolvimento de Documentos e Laudos Técnicos, Relatórios 
+              Gerenciais e Dashboards específicos para cada cliente, seguindo suas definições e área de atuação. Criação de módulos adicionais 
+              específicos para a realização de integração do sistema junto aos equipamentos de análises do cliente. Correções de falhas e 
+              implementação de melhorias no sistema. Participação de projetos em etapa de implantação com realização de consultorias e adequação 
+              de automação, seguindo normas do INMETRO e ISO.
+            </p>
+          </div>
+          <div class="resume-date text-md-right">
+            <span class="text-primary">Janeiro 2016 | Fevereiro 2017</span>
+          </div>
+        </div>
+        <!-- // Labsoft -->
+
+        <!-- SE7EN / SOLID Dev Team (Freelance)  -->
         <div class="resume-item d-flex flex-column flex-md-row mb-5">
           <div class="resume-content mr-auto">
             <h3 class="mb-0">Desenvolvedor Frontend Angular</h3>
@@ -153,9 +172,9 @@
             <span class="text-primary">Novembro 2017</span>
           </div>
         </div>
-        <!-- // Tavoloni -->
+        <!-- // SE7EN / SOLID Dev Team (Freelance) -->
 
-        <!-- Késsem -->
+        <!-- SE7EN / SOLID Dev Team (Freelance) -->
         <div class="resume-item d-flex flex-column flex-md-row mb-5">
           <div class="resume-content mr-auto">
             <h3 class="mb-0">Desenvolvedor Backend NodeJS</h3>
@@ -169,7 +188,7 @@
             <span class="text-primary">Agosto 2017 | Setembro 2017</span>
           </div>
         </div>
-        <!-- // Késsem -->
+        <!-- // SE7EN / SOLID Dev Team (Freelance) -->
 
         <!-- Prime -->
         <div class="resume-item d-flex flex-column flex-md-row mb-5">
