--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <meta name="description" content="Currículo">
   <meta name="author" content="Ricardo Rinco">
-  <title>Ricardo Rinco ::: Desenvolvedor</title>
+  <title>Ricardo Rinco ::: Desenvolvedor Fullstack</title>
 
   <!-- Browser Mobile Color -->
   <!-- Chrome, Firefox and Opera -->
@@ -138,7 +138,7 @@
       <div class="my-auto">
         <h2 class="mb-5"><i class="fa fa-suitcase text-primary"></i> Experiência Profissional</h2>
 
-        <!-- Labsoft -->
+        <!-- Labsoft II -->
         <div class="resume-item d-flex flex-column flex-md-row mb-5">
           <div class="resume-content mr-auto">
             <h3 class="mb-0">Desenvolvedor Backend .Net</h3>
@@ -152,10 +152,10 @@
             </p>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">Janeiro 2016 | Fevereiro 2017</span>
+            <span class="text-primary">Março 2018</span>
           </div>
         </div>
-        <!-- // Labsoft -->
+        <!-- // Labsoft II -->
 
         <!-- SE7EN / SOLID Dev Team (Freelance)  -->
         <div class="resume-item d-flex flex-column flex-md-row mb-5">
@@ -169,7 +169,7 @@
             </p>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">Novembro 2017</span>
+            <span class="text-primary">Novembro 2017 | Março 2018</span>
           </div>
         </div>
         <!-- // SE7EN / SOLID Dev Team (Freelance) -->
@@ -223,7 +223,7 @@
         </div>
         <!-- // UpSoftware -->
 
-        <!-- Labsoft -->
+        <!-- Labsoft I -->
         <div class="resume-item d-flex flex-column flex-md-row mb-5">
           <div class="resume-content mr-auto">
             <h3 class="mb-0">Desenvolvedor Backend .Net</h3>
@@ -240,7 +240,7 @@
             <span class="text-primary">Janeiro 2016 | Fevereiro 2017</span>
           </div>
         </div>
-        <!-- // Labsoft -->
+        <!-- // Labsoft I -->
 
         <!-- Regra -->
         <div class="resume-item d-flex flex-column flex-md-row">
