--- a/index.html
+++ b/index.html
@@ -85,22 +85,15 @@
         <h1 class="mb-0"><i class="fa fa-user-o text-primary"></i> Ricardo <span class="text-primary">Rinco</span></h1>
         <div class="subheading mb-5">Adventista do Sétimo Dia, Observador do Sábado. Jundiaí · São Paulo</div>
         <br>
-
-        <p class="mb-5">
           Profissional formado com Honra ao Mérito em Sistemas de Informação, com atuações em atividades voltadas ao desenvolvimento de softwares utilizando 
           .Net Framework e Visual Studio.
-          
-          <br><br>Possuo boa experiência em .Net C# atuando em projetos Desktop, Web (MVC e WebForms) e WebAPI com desenvolvimento e manutenção de aplicações multicamadas 
-          empregando Padrões de Projetos, conceitos de Orientação a Objetos, boas práticas de Arquitetura de Software e realização de Testes Unitários.
-
-          <br><br>Utilização dos Bancos de Dados mais utilizados no mercado, SQL Server, MySQL e Oracle. Implementação dos ORM EntityFramework, NHibernate e Dapper, para 
-          acesso aos dados.
-
+          <br><br>Possuo boa experiência em .Net C# atuando em projetos Desktop, Web (MVC, WebForms e Angular), WebAPI (REST) e Mobile (Xamarin Forms). 
+          Desenvolvimento e manutenção de aplicações multicamadas empregando padrões de projetos, conceitos de orientação a objetos, boas práticas de arquitetura 
+          de software e realização de testes unitários.
+          <br><br>Utilização dos bancos de dados, SQL Server, MySQL e Realm (Mobile). Implementação de ORM EntityFramework, NHibernate e Dapper, para acesso aos dados.
           <br><br>Elaboração de especificações funcionais, levantamento de requisitos e modelagem de sistemas.
-
-          <br><br>Experiências nas tecnologias: .Net Core, VB.Net, Windows Forms, ADO.NET, LINQ, ReportViewer, Crystal Reports e Angular.
-
-          <br><br>Conhecimentos nas tecnologias: SQLite, MongoDB, NodeJS e desenvolvimento de aplicações móveis utilizando Android SDK, Xamarin e Ionic.
+          <br><br>Experiências nas tecnologias .Net Core, VB.Net, Windows Forms, ADO.NET, LINQ, ReportViewer, Crystal Reports, Angular.
+          <br><br>Conhecimentos nas tecnologias SQLite, MongoDB, NodeJS e desenvolvimento de aplicações móveis utilizando Android SDK.
         </p>
 
         <ul class="list-inline list-social-icons mb-0">
@@ -136,19 +129,22 @@
     <!-- Experience -->
     <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="experience">
       <div class="my-auto">
-        <h2 class="mb-5"><i class="fa fa-suitcase text-primary"></i> Experiência Profissional</h2>
+        <h2 class="mb-5"><i class="fa fa-suitcase text-primary"></i> Experiências Profissionais</h2>
 
         <!-- Labsoft II -->
         <div class="resume-item d-flex flex-column flex-md-row mb-5">
           <div class="resume-content mr-auto">
-            <h3 class="mb-0">Desenvolvedor Backend .Net</h3>
-            <div class="subheading mb-3">Labsoft Tecnologia</div>
+            <h3 class="mb-0">Desenvolvedor .Net</h3>
+            <div class="subheading mb-3">LABSOFT</div>
             <p>
-              Atuação com Sistema de Automação e Gestão de Laboratórios (LIMS). Desenvolvimento de Documentos e Laudos Técnicos, Relatórios 
-              Gerenciais e Dashboards específicos para cada cliente, seguindo suas definições e área de atuação. Criação de módulos adicionais 
-              específicos para a realização de integração do sistema junto aos equipamentos de análises do cliente. Correções de falhas e 
-              implementação de melhorias no sistema. Participação de projetos em etapa de implantação com realização de consultorias e adequação 
-              de automação, seguindo normas do INMETRO e ISO.
+              Responsável pela criação de um novo aplicativo Mobile. Este app tem como objetivo resolver os problemas que as empresas de Saneamento 
+              enfrentam para a realização de suas análises em campo, substituindo as planilhas em papel por uma forma muito mais segura para armazenamento 
+              dos dados. Desenvolvimento seguindo os padrões de Offline-First, ou seja, após a realização das configurações e sincronizações o app funciona 
+              totalmente offline. As principais tecnologias utilizadas no projeto foram Xamarin Forms e o banco de dados Realm.
+            </p>
+            <p>
+              Participação na seleção de novos talentos, triagem de currículos. Elaboração e correção de testes práticos aplicados durante os testes. 
+              Realização de entrevistas com os candidatos selecionados e aprovados nos testes básicos.
             </p>
           </div>
           <div class="resume-date text-md-right">
@@ -157,77 +153,44 @@
         </div>
         <!-- // Labsoft II -->
 
-        <!-- SE7EN / SOLID Dev Team (Freelance)  -->
+        <!-- Bematech -->
         <div class="resume-item d-flex flex-column flex-md-row mb-5">
           <div class="resume-content mr-auto">
-            <h3 class="mb-0">Desenvolvedor Frontend Angular</h3>
-            <div class="subheading mb-3">SE7EN / SOLID Dev Team (Freelance)</div>
-            <p>
-              Desenvolvimento de Arquitetura Frontend em Angular 4.X para suporte de aplicação E-commerce e Backoffice de multiusuário.
-              Implementação de JSON Web Token, Serviços, Interceptors, Pipes, Rotas e Componentes para comunicação com os endpoints 
-              disponibilizados através de WebAPI Rest.
-            </p>
-          </div>
-          <div class="resume-date text-md-right">
-            <span class="text-primary">Novembro 2017 | Março 2018</span>
-          </div>
-        </div>
-        <!-- // SE7EN / SOLID Dev Team (Freelance) -->
-
-        <!-- SE7EN / SOLID Dev Team (Freelance) -->
-        <div class="resume-item d-flex flex-column flex-md-row mb-5">
-          <div class="resume-content mr-auto">
-            <h3 class="mb-0">Desenvolvedor Backend NodeJS</h3>
-            <div class="subheading mb-3">SE7EN / SOLID Dev Team (Freelance)</div>
-            <p>
-              Criação de Arquitetura de Micro-Serviços adequados para desenvolvimento de endpoints em NodeJS. Implementação de Login Social 
-              (Facebook, Google Plus e Twiiter).
-            </p>
-          </div>
-          <div class="resume-date text-md-right">
-            <span class="text-primary">Agosto 2017 | Setembro 2017</span>
-          </div>
-        </div>
-        <!-- // SE7EN / SOLID Dev Team (Freelance) -->
-
-        <!-- Prime -->
-        <div class="resume-item d-flex flex-column flex-md-row mb-5">
-          <div class="resume-content mr-auto">
-            <h3 class="mb-0">Desenvolvedor Backend .Net</h3>
-            <div class="subheading mb-3">Prime Desenvolvimento de Software</div>
+            <h3 class="mb-0">Desenvolvedor .Net</h3>
+            <div class="subheading mb-3">Bematech</div>
             <p>
               Desenvolvimento e correções em sistema de varejo. Integração entre sistemas legados com novas tecnologias utilizando 
               .Net Core com Arquitetura de Micro-Serviços e Base de Dados NoSQL (MongoDB), adotando e implementando padrões do Boilerplate. 
-              Metodologia ágil de gestão da equipe SCRUM.
+              Metodologia ágil de gestão da equipe SCRUM e KANBAN.
             </p>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">Junho 2017 | Agosto 2017</span>
+            <span class="text-primary">Junho 2017 - Agosto 2017</span>
           </div>
         </div>
-        <!-- // Prime -->
+        <!-- // Bematech -->
 
-        <!-- UpSoftware -->
+        <!-- UP Software -->
         <div class="resume-item d-flex flex-column flex-md-row mb-5">
           <div class="resume-content mr-auto">
-            <h3 class="mb-0">Desenvolvedor Fullstack .Net</h3>
-            <div class="subheading mb-3">UpSolutions Serviços Empresariais</div>
+            <h3 class="mb-0">Desenvolvedor .Net</h3>
+            <div class="subheading mb-3">UP Software</div>
             <p>
               Desenvolvimento de Arquitetura .Net de Micro-Serviços para software ERP. Modelagem da Arquitetura seguindo os princípios de DDD 
               (Domain-Driven Design). Utilização de boas práticas de desenvolvimento de software, Orientação a Objetos e Design Paterns.
             </p>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">Março 2017 | Abril 2017</span>
+            <span class="text-primary">Março 2017 - Abril 2017</span>
           </div>
         </div>
-        <!-- // UpSoftware -->
+        <!-- // UP Software -->
 
         <!-- Labsoft I -->
         <div class="resume-item d-flex flex-column flex-md-row mb-5">
           <div class="resume-content mr-auto">
-            <h3 class="mb-0">Desenvolvedor Backend .Net</h3>
-            <div class="subheading mb-3">Labsoft Tecnologia</div>
+            <h3 class="mb-0">Desenvolvedor .Net</h3>
+            <div class="subheading mb-3">LABSOFT</div>
             <p>
               Atuação com Sistema de Automação e Gestão de Laboratórios (LIMS). Desenvolvimento de Documentos e Laudos Técnicos, Relatórios 
               Gerenciais e Dashboards específicos para cada cliente, seguindo suas definições e área de atuação. Criação de módulos adicionais 
@@ -237,7 +200,7 @@
             </p>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">Janeiro 2016 | Fevereiro 2017</span>
+            <span class="text-primary">Janeiro 2016 - Fevereiro 2017</span>
           </div>
         </div>
         <!-- // Labsoft I -->
@@ -245,8 +208,8 @@
         <!-- Regra -->
         <div class="resume-item d-flex flex-column flex-md-row">
           <div class="resume-content mr-auto">
-            <h3 class="mb-0">Desenvolvedor Fullstack .Net</h3>
-            <div class="subheading mb-3">Regra Tecnologia da Informação</div>
+            <h3 class="mb-0">Desenvolvedor .Net</h3>
+            <div class="subheading mb-3">Regra</div>
             <p>
               Desenvolvimento e manutenção de módulos de sistema ERP. Estabelecimento de processos operacionais necessários para o tratamento 
               dos dados, baseando-se nas definições fornecidas na fase de análise e valendo-se de métodos e técnicas adequadas aos equipamentos 
@@ -256,15 +219,81 @@
             </p>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">Janeiro 2014 | Novembro 2015</span>
+            <span class="text-primary">Janeiro 2014 - Novembro 2015</span>
           </div>
         </div>
         <!-- // Regra -->
 
+        <br><br>
+        <h2 class="mb-5"><i class="fa fa-suitcase text-primary"></i> Freelance</h2>
+        <!-- SE7EN -->
+        <div class="resume-item d-flex flex-column flex-md-row mb-5">
+          <div class="resume-content mr-auto">
+            <h3 class="mb-0">Desenvolvedor Frontend Angular</h3>
+            <div class="subheading mb-3">SE7EN</div>
+            <p>
+              Desenvolvimento de aplicação frontend em Angular 7 para realização de pagamentos diversos.
+            </p>
+          </div>
+          <div class="resume-date text-md-right">
+            <span class="text-primary">Abril 2019</span>
+          </div>
+        </div>
+        <!-- // SE7EN -->
+
+        <!-- SE7EN -->
+        <div class="resume-item d-flex flex-column flex-md-row mb-5">
+          <div class="resume-content mr-auto">
+            <h3 class="mb-0">Desenvolvedor Frontend Angular</h3>
+            <div class="subheading mb-3">SE7EN</div>
+            <p>
+              Desenvolvimento de aplicação frontend em Angular 6 para suporte de aplicação de marketing multinível. 
+              Implementação de JWT, serviços, interceptor, pipes, rotas e componentes para comunicação com os endpoints 
+              disponibilizados através de WebAPI Rest.
+            </p>
+          </div>
+          <div class="resume-date text-md-right">
+            <span class="text-primary">Setembro 2018 - Outubro 2018</span>
+          </div>
+        </div>
+        <!-- // SE7EN -->
+
+        <!-- SE7EN -->
+        <div class="resume-item d-flex flex-column flex-md-row mb-5">
+          <div class="resume-content mr-auto">
+            <h3 class="mb-0">Desenvolvedor Frontend Angular</h3>
+            <div class="subheading mb-3">SE7EN</div>
+            <p>
+              Desenvolvimento de aplicativo web em Angular 3 para suporte de aplicação e-commerce e backoffice 
+              de multiusuário. Implementação de JWT, serviços, interceptor, pipes, rotas e componentes para comunicação 
+              com os endpoints disponibilizados através de API Rest. Realização da migração do projeto para Angular 5.
+            </p>
+          </div>
+          <div class="resume-date text-md-right">
+            <span class="text-primary">Novembro 2017 | Março 2018</span>
+          </div>
+        </div>
+        <!-- // SE7EN -->
+  
+        <!-- SE7EN -->
+        <div class="resume-item d-flex flex-column flex-md-row mb-5">
+          <div class="resume-content mr-auto">
+            <h3 class="mb-0">Desenvolvedor Backend NodeJS</h3>
+            <div class="subheading mb-3">SE7EN</div>
+            <p>
+              Criação de aplicação utilizando conceitos de Micro-Serviços adequados para desenvolvimento de endpoints em node.js 
+              utilizando ExpressJS. Implementação de Login Social (Single Sign-On) com as redes sociais: Facebook, Google Plus e Twiiter.
+            </p>
+          </div>
+          <div class="resume-date text-md-right">
+            <span class="text-primary">Agosto 2017 | Setembro 2017</span>
+          </div>
+        </div>
+        <!-- // SE7EN -->
       </div>
     </section>
     <!-- // Experience -->
-    
+
     <!-- Education -->
     <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="education">
       <div class="my-auto">
