Atualização da formação acadêmica

--- a/index.html
+++ b/index.html
@@ -308,47 +308,10 @@
               <p>MEC 3990</p>
             </div>
             <div class="resume-date text-md-right">
-              <span class="text-primary">Janeiro 2013 | Dezembro 2016</span>
+              <span class="text-primary">Janeiro de 2013 - Dezembro de 2016</span>
             </div>
           </div>
           <!-- // Sistemas de Informação -->
-          
-          <!-- Desenvolvimento de Sistemas em .Net com MVC 4 -->
-          <div class="resume-item d-flex flex-column flex-md-row mb-5">
-            <div class="resume-content mr-auto">
-              <h3 class="mb-0">Desenvolvimento de Sistemas em .Net com MVC 4</h3>
-              <div class="subheading mb-3">Centro Universitário Padre Anchieta</div>
-            </div>
-            <div class="resume-date text-md-right">
-              <span class="text-primary">Setembro 2015 | Novembro 2015</span>
-            </div>
-          </div>
-          <!-- // Sistemas de Informação -->
-
-          <!-- ASP.Net MVC 5 – Entrerprise Applications  -->
-          <div class="resume-item d-flex flex-column flex-md-row mb-5">
-            <div class="resume-content mr-auto">
-              <h3 class="mb-0">ASP.Net MVC 5 – Entrerprise Applications </h3>
-              <div class="subheading mb-3">Eduardo Pires – Treinamento e Consultoria</div>
-            </div>
-            <div class="resume-date text-md-right">
-              <span class="text-primary">Janeiro 2017 | Fevereiro 2017</span>
-            </div>
-          </div>
-          <!-- // Sistemas de Informação -->
-
-          <!-- Arquitetura de Software .Net -->
-          <div class="resume-item d-flex flex-column flex-md-row mb-5">
-            <div class="resume-content mr-auto">
-              <h3 class="mb-0">Arquitetura de Software .Net</h3>
-              <div class="subheading mb-3">Eduardo Pires – Treinamento e Consultoria</div>
-            </div>
-            <div class="resume-date text-md-right">
-              <span class="text-primary">Fevereiro 2017 | Fevereiro 2017</span>
-            </div>
-          </div>
-          <!-- // Sistemas de Informação -->
-        
       </div>
     </section>
     <!-- // Education -->
