Added Certificate SFPC

--- a/index.html
+++ b/index.html
@@ -445,6 +445,10 @@
 
           <li>
             <i class="fa-li fa fa-trophy text-warning"></i>
+            <strong>Scrum Foundation Professional Certificate (SFPC)</strong> | CertiProf® 
+          </li>
+          <li>
+            <i class="fa-li fa fa-trophy text-warning"></i>
             <strong>Xamarin Forms - Avançado</strong> | Udemy
           </li>
           <li>
