--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <meta name="description" content="Currículo">
   <meta name="author" content="Ricardo Rinco">
-  <title>💻 Desenvolvedor .Net / Angular / Xamarin ::: Ricardo Rinco</title>
+  <title>💻 Desenvolvedor .Net / Angular ::: Ricardo Rinco</title>
 
   <!-- Browser Mobile Color -->
   <!-- Chrome, Firefox and Opera -->
@@ -83,7 +83,7 @@
     <section class="resume-section p-3 p-lg-5 d-flex d-column" id="about">
       <div class="my-auto">
         <h1 class="mb-0"><i class="fa fa-user-o text-primary"></i> Ricardo <span class="text-primary">Rinco</span></h1>
-        <div class="subheading mb-5">Adventista do Sétimo Dia, Observador do Sábado. Jundiaí - SP</div>
+        <div class="subheading mb-5">Observador do Sábado. Jundiaí - SP</div>
         <br>
           Profissional formado com Honra ao Mérito em Sistemas de Informação, com atuações em atividades voltadas ao desenvolvimento de softwares utilizando 
           .Net Framework e Visual Studio.
@@ -130,6 +130,25 @@
     <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="experiences">
       <div class="my-auto">
         <h2 class="mb-5"><i class="fa fa-suitcase text-primary"></i> Experiências Profissionais</h2>
+    
+        <!-- Finamax -->
+        <div class="resume-item d-flex flex-column flex-md-row mb-5">
+          <div class="resume-content mr-auto">
+            <h3 class="mb-0">FINAMAX</h3>
+            <div class="subheading mb-3">Desenvolvedor FullStack</div>
+            <p>
+              Responsável pelo frontend de um novo aplicativo PWA. As principais tecnologias utilizadas são Angular, .Net Core e Azure Service Bus. 
+              Esta aplicação terá como principal objetivo reduzir o tempo de espera das novas solicitações de Crédito Pessoal.
+            </p>
+            <p>
+              Ministração de treinamento Angular para todos do time de desenvolvimento.
+            </p>
+          </div>
+          <div class="resume-date text-md-right">
+            <span class="text-primary">Julho de 2019</span>
+          </div>
+        </div>
+        <!-- // Finamax -->
 
         <!-- Labsoft II -->
         <div class="resume-item d-flex flex-column flex-md-row mb-5">
@@ -148,7 +167,7 @@
             </p>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">Março de 2018</span>
+            <span class="text-primary">Março de 2018 - Julho de 2019</span>
           </div>
         </div>
         <!-- // Labsoft II -->
