--- a/index.html
+++ b/index.html
@@ -28,38 +28,33 @@
 
     <!-- Fonts -->
     <!-- Google Font -->
-    <link
-        href='https://fonts.googleapis.com/css?family=Roboto:400,500,400italic,300italic,300,500italic,700,700italic,900,900italic'
-        rel='stylesheet' type='text/css'>
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap" rel="stylesheet">
     <!-- FontAwesome JS -->
-    <script defer src="https://use.fontawesome.com/releases/v5.1.0/js/all.js"
-        integrity="sha384-3LK/3kTpDE/Pkp8gTNp2gR/2gOiwQ6QaO7Td0zV76UFJVhqLl4Vl3KL1We6q6wR9"
-        crossorigin="anonymous"></script>
+    <script defer src="https://use.fontawesome.com/releases/v5.1.0/js/all.js" integrity="sha384-3LK/3kTpDE/Pkp8gTNp2gR/2gOiwQ6QaO7Td0zV76UFJVhqLl4Vl3KL1We6q6wR9" crossorigin="anonymous"></script>
     <!-- // Fonts -->
 
     <!-- CSS -->
     <!-- Global CSS -->
     <link rel="stylesheet" href="assets/plugins/bootstrap/css/bootstrap.min.css">
     <!-- Theme CSS -->
-    <link id="theme-style" rel="stylesheet" href="assets/css/orbit-1.css">
+    <link id="theme-style" rel="stylesheet" href="assets/css/orbit.css">
     <!-- // CSS -->
 </head>
 <!-- // Head -->
 
 <!-- Body -->
-
 <body>
     <div class="wrapper">
         <!-- Sidebar -->
         <div class="sidebar-wrapper">
             <!-- Profile -->
             <div class="profile-container">
-                <img class="profile" src="assets/images/profile.png" alt="" />
+                <img class="profile" src="assets/images/profile.png" alt="Ricardo Rinco" />
                 <h1 class="name">Ricardo Rinco</h1>
-                <h3 class="tagline">Full Stack Developer</h3>
+                <h3 class="tagline">Desenvolvedor Full Stack</h3>
                 <br>
 
-                <h6>Observador do Sábado</h6>
                 <h6>
                     🙏🏻 💻 📚 🎮 🚵 📽️ 📸
                 </h6>
