Atuação de experiência: procob serviços

--- a/index.html
+++ b/index.html
@@ -196,78 +196,75 @@
 
         <!-- Main -->
         <div class="main-wrapper">
-            <!-- About -->
+            <!-- Summary -->
             <section class="section summary-section">
-                <h2 class="section-title"><span class="icon-holder"><i class="fas fa-user"></i></span>Carreira</h2>
+                <h2 class="section-title">
+                    <span class="icon-holder"><i class="fas fa-user"></i></span>Carreira
+                </h2>
+
                 <div class="summary">
                     <p>
-                        Formado com <b>Honra ao Mérito</b> em Sistemas de Informação, com atuações em atividades voltadas ao
-                        desenvolvimento de softwares utilizando.
+                        <strong>Cristão</strong> em tempo integral, <strong>Observador do Sábado</strong> por amor e
+                        <strong>Desenvolvedor Full Stack</strong> por paixão. Procuro estar sempre ligado e motivado
+                        em conhecer novas tecnologias, e quando não estou aprendendo algo novo procuro me divertir nos
+                        autódromos virtuais
+                    </p>
+
+                    <p>
+                        Bacharel formado com <strong>Honra ao Mérito</strong> em Sistemas de Informação. Focado em
+                        tecnologia para aplicações web.
                     </p>
                     <p>
-                        Boa experiência em .Net C# atuando em projetos Desktop, Web (MVC, WebForms e Angular), WebAPI
-                        (REST) e Mobile (Ionic e Xamarin Forms).
+                        Experiência em desenvolvimento e manutenção de aplicações <strong>.Net</strong>,
+                        <strong>.Net Core</strong> e <strong>Angular</strong>, empregando padrões de projetos,
+                        conceitos de orientação a objetos, boas práticas de arquitetura de software e
+                        realizações de testes unitários.
                     </p>
                     <p>
-                        Desenvolvimento e manutenção de aplicações multicamadas empregando padrões de projetos,
-                        conceitos de orientação a objetos, boas práticas de arquitetura de software e realizações de
-                        testes unitários.
+                        Utilização dos principais bancos de dados, relacionais e não relacionais, <strong>SQL Server</strong>,
+                        <strong>MySQL</strong>, <strong>MongoDB</strong> e <strong>Realm</strong>. Realização das consultas
+                        utilizando <strong>ADO.Net</strong>, <strong>Entity Framework</strong>, <strong>NHibernate</strong> e
+                        <strong>Dapper</strong>.
                     </p>
                     <p>
-                        Utilização dos bancos de dados, SQL Server, MySQL e Realm.
-                    </p>
-                    <p>
-                        Implementação de ORM EntityFramework, NHibernate e Dapper, para acesso aos dados.
-                    </p>
-                    <p>
-                        Elaboração de especificações funcionais, levantamento de requisitos e modelagem de sistemas.
-                    </p>
-                    <p>
-                        Experiências nas tecnologias .Net Core, VB.Net, Windows Forms, ADO.NET, LINQ, ReportViewer,
-                        Crystal Reports, Angular.
-                    </p>
-                    <p>
-                        Conhecimentos nas tecnologias SQLite, MongoDB, NodeJS e desenvolvimento de aplicações móveis
-                        utilizando Android SDK.
-                    </p>
-                    <p>
-                        Vivência com metodologias ágeis como SCRUM e KANBAN.
+                        Elaboração de especificações funcionais, levantamento de requisitos e modelagem de sistemas e vivência
+                        com metodologias ágeis como <strong>SCRUM</strong> e <strong>KANBAN</strong>.
                     </p>
                 </div>
             </section>
-            <!-- // About -->
+            <!-- // Summary -->
 
             <!-- Experiences -->
             <section class="section experiences-section">
-                <h2 class="section-title"><span class="icon-holder"><i class="fas fa-briefcase"></i></span>Experiências
+                <h2 class="section-title">
+                    <span class="icon-holder"><i class="fas fa-briefcase"></i></span>Experiências
                 </h2>
 
-                <!-- FINAMAX -->
+                <!-- PROCOB Serviços -->
                 <div class="item">
                     <div class="meta">
                         <div class="upper-row">
-                            <h3 class="job-title">Desenvolvedor Pleno/Sênior</h3>
+                            <h3 class="job-title">Desenvolvedor Frontend</h3>
                             <div class="time">JULHO DE 2019</div>
                         </div>
-                        <div class="company">FINAMAX, Jundiaí - SP</div>
+                        <div class="company">PROCOB Serviços, Jundiaí - SP</div>
                     </div>
                     <div class="details">
                         <p>
-                            Responsável técnico do projeto frontend de um aplicativo PWA seguindo conceitos de
-                            Mobile-First.
+                            Atuando com desenvolvimento de aplicações frontend em Angular 11. O objetivo
+                            é reduzir o tempo de espera em solicitações de crédito pessoal realizando uma
+                            transformação digital com a implementação do novo produto seguindo o padrão
+                            de mobile-first.
                         </p>
                         <p>
-                            As principais tecnologias utilizadas são Angular, .Net Core e Azure Service Bus.
-                        </p>
-                        <p>
-                            Esta
-                            aplicação
-                            tem como principal objetivo facilitar a burocracia e otimizar o tempo de espera referente as
-                            novas solicitações de crédito pessoal e demais produtos ofertados pela empresa.
+                            Responsável pelo design da arquitetura do projeto, modularização das features
+                            e implementações como, serviços de comunicação com API REST, interceptor para
+                            autorizaçãodo app através de JWT, pipes para tratamento de dados e componentes
+                            compartilhados.
                         </p>
                     </div>
                 </div>
-                <!-- // FINAMAX -->
+                <!-- // PROCOB Serviços -->
 
                 <!-- LABSOFT II -->
                 <div class="item">
