Atuação de experiência: labsoft

--- a/index.html
+++ b/index.html
@@ -270,30 +270,22 @@
                 <div class="item">
                     <div class="meta">
                         <div class="upper-row">
-                            <h3 class="job-title">Desenvolvedor Pleno/Sênior</h3>
+                            <h3 class="job-title">Desenvolvedor Sênior</h3>
                             <div class="time">MARÇO DE 2018 - JULHO DE 2019</div>
                         </div>
                         <div class="company">LABSOFT, Jundiaí - SP</div>
                     </div>
                     <div class="details">
                         <p>
-                            Responsável pela criação de um novo aplicativo móvel. Este app tem como objetivo resolver os
-                            problemas que as empresas de saneamento enfrentam para a realização de suas análises em
-                            campo, substituindo as planilhas de papel por uma forma muito mais rápida e segura para
-                            armazenamento dos dados.
+                            Responsável pela criação de um novo aplicativo móvel, com o objetivo de resolver os
+                            problemas que a indústria de saneamento básico enfrenta para a realização de suas
+                            análises em campo. O principal desafio foi o de substituir as planilhas impressas
+                            por uma forma muito mais rápida e segura para armazenamento dos dados.
                         </p>
                         <p>
-                            Desenvolvimento seguindo os padrões Offline-First, para que após a realização das
-                            configurações e sincronizações o app funcione totalmente offline.
-                        </p>
-                        <p>
-                            Como tecnologias principais neste projeto foram utilizadas Xamarin Forms e a base de dados
-                            Realm.
-                        </p>
-                        <p>
-                            Responsável pela seleção e recrutamento de novos talentos. Elaboração e correção de testes
-                            práticos aplicados para os candidatos. Realização de entrevistas presenciais com os
-                            candidatos selecionados e aprovados nos testes.
+                            O processo de desenvolvimento seguiu o padrão offline-first, utilizando como
+                            principal tecnologia o Xamarin com o padrão MVVM, adotando para o armazenamento dos
+                            dados a base não relacional Realm.
                         </p>
                     </div>
                 </div>
@@ -348,18 +340,18 @@
                     </div>
                     <div class="details">
                         <p>
-                            Atuação com Sistema de Automação e Gestão de Laboratórios (LIMS). Responsável pelo
-                            desenvolvimento de Documentos, Laudos Técnicos, Relatórios Gerenciais e Dashboards
-                            específicos para cada cliente, utilizando .Net C# e Handlebars.
+                            Atuação com sistema de automação e gestão de laboratórios (LIMS), responsável pelo
+                            desenvolvimento de documentos, laudos técnicos, relatórios gerenciais e dashboards
+                            específicos para cada cliente, utilizando .Net C#, HTML, CSS e Handlebars (Javascript)
                         </p>
                         <p>
-                            Criação de módulos adicionais específicos para a realização de integrações através de REST,
-                            para a realização da comunicação do sistema com os equipamentos de análises e sistemas de
+                            Criação e manutenção de módulos específicos de integrações através de API REST, onde
+                            era realizada a comunicação do sistema com os equipamentos de análises e sistemas de
                             terceiros.
                         </p>
                         <p>
-                            Participação de projetos em etapa de implantação com realização de consultorias e adequação
-                            de automação, seguindo a norma ABNT NBR ISO/IEC 17025.
+                            Participação de projetos em etapa de implantação com realização de consultorias e
+                            adequação de automação, seguindo a norma ABNT NBR ISO/IEC 17025.
                         </p>
                     </div>
                 </div>
