Atuação de experiência: bematech e upsoftware

--- a/index.html
+++ b/index.html
@@ -302,9 +302,10 @@
                     </div>
                     <div class="details">
                         <p>
-                            Desenvolvimento e correções em sistema de varejo. Integração entre sistemas legados com
-                            novas tecnologias utilizando .Net Core com arquitetura de Micros-Serviços e base de dados
-                            NoSQL (MongoDB), adotando e implementando padrões e boas práticas.
+                            Realização do desenvolvimento de uma solução com arquitetura de Micro-Serviço utilizando
+                            .Net Core e base de dados MongoDB. O desafio era realizar a integração de um sistema de
+                            pontuação com a base de dados do sistema de gerenciamento atual do cliente, adotado no
+                            projeto os principais padrões e boas práticas de desenvolvimento.
                         </p>
                     </div>
                 </div>
@@ -321,9 +322,9 @@
                     </div>
                     <div class="details">
                         <p>
-                            Desenvolvimento de arquitetura .Net de Micro-Serviços para software ERP. Modelagem da
-                            arquitetura seguindo os princípios de Domain-Driven Design. Utilização de boas práticas como
-                            Orientação a Objetos e Design Paterns.
+                            Implementação de arquitetura .Net seguindo padrões de Micro-Serviços para a migração de um
+                            software ERP. Iniciação da modelagem da arquitetura seguindo os princípios e boas práticas
+                            como orientação a objetos e padrões de projetos.
                         </p>
                     </div>
                 </div>
